<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dndbg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nodesto_caps"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#681010"
            android:textSize="36sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutMenuView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMenuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nodesto_caps"
            android:gravity="center"
            android:text="@string/txtMenuView"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMenuHelp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMenuHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nodesto_caps"
            android:gravity="center"
            android:text="@string/txtMenuHelp"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMenuAbout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMenuAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nodesto_caps"
            android:gravity="center"
            android:text="@string/txtMenuAbout"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:gravity="center"
        android:orientation="vertical">
    </LinearLayout>
</LinearLayout>