<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dndbg"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="35dp">

            <TextView
                android:id="@+id/txtDetailsSpellTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/book_insanity"
                android:text="TextView"
                android:textColor="@color/titleColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtDetailsSpellLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/scaly_sans_italic"
                android:text="TextView"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDetailsSpellCasting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans_bold"
                    android:text="@string/label_details_casting"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtDetailsSpellCasting"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDetailsSpellRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans_bold"
                    android:text="@string/label_details_range"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtDetailsSpellRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/scaly_sans"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/lblDetailsSpellComponent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans_bold"
                    android:text="@string/label_details_component"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtDetailsSpellComponent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/scaly_sans"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/lblDetailsSpellDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans_bold"
                    android:text="@string/label_details_duration"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtDetailsSpellDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/scaly_sans"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDetailsSpellDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/scaly"
                android:text="TextView"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/lblDetailsSpellClasses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans_bold"
                    android:text="@string/label_details_class"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtDetailsSpellClasses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/scaly_sans"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/lblDetailsSpellSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scaly_sans_bold"
                    android:text="@string/label_details_source"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtDetailsSpellSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/scaly_sans"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>